# microlisp

./: .clang-format  .clang-tidy  .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SUPPORT.md  crash-1fbbcefdfa7646255f2c0d41de79e4c9bb17f861  crash-9001dcfb4c72fa5074d8d9513980eeb415726092
.githooks/: pre-commit
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  codeql.yml
cmake/: CompilerWarnings.cmake  Sanitizers.cmake  microlisp.pc.in  microlispConfig.cmake.in
docs/: Doxyfile
examples/: embed_example.c
include/microlisp/: export.h  microlisp.h  version.h.in
scripts/: coverage.sh  format.sh  install-hooks.sh  lint.sh
src/: env.c  eval.c  gc.c  main.c  microlisp_internal.h  primitives.c  printer.c  reader.c  state.c  status.c  symtab.c  value.c  version.c
tests/: CMakeLists.txt  check_doxygen_coverage.sh  check_doxygen_coverage_negative.sh  check_exports.sh  check_exports_negative.sh  test_microlisp.c
tests/consumer/: CMakeLists.txt  consumer.c
tests/fuzz/: CMakeLists.txt  fuzz_eval.c  fuzz_read.c  microlisp.dict
tests/fuzz/corpus/: 06_factorial  08_dotted  10_comment  11_tco_accum  12_letrec_mutual  13_closure_state  14_cond_chain  15_and_or  16_string_escapes  17_alist  18_higher_order
